--- a/documentation.html
+++ b/documentation.html
@@ -29,28 +29,28 @@
             <a href="https://khreda.com/teaching/spring22/H517/project1/">Project Details</a><br><br>
             <h3>Design:</h3><br>
             <h4>1. Layout</h4><br>
-            <img width="600" height="400" src="imgs/layout_2.png">
-            <img width="600" height="400" src="imgs/layout_3.png"> <br><br>
+            <img width="600" height="400" src="layout_2.png">
+            <img width="600" height="400" src="layout_3.png"> <br><br>
             a. Initially, I decided to display map with labels and time series graph as shown in above left image.
             Later-on, I rearranged the layout which includes dropdown, histogram plot <br> to right side and moved the labels to bottom as shown above right side image.<br><br>
             <h4>2.Visualization</h4><br>
             a. Created stable interactive map with streets, pumps and deaths locations. <br><br>
             b. Map with 5 Street names labels, work house and brewery along with Zoom and pan functions within SVG view-box.<br><br>
-            <img width="600" height="500" src="imgs/layout_4.png"> 
-            <img width="600" height="500" src="imgs/layout_5.png"> <br><br>
+            <img width="600" height="500" src="layout_4.png">
+            <img width="600" height="500" src="layout_5.png"> <br><br>
             c.Interactive time series graph with number of deaths per each day during the epidemic period and cursor movement that reflects on map. <br><br>
-            <img width="900" height="500" src="imgs/layout_7.png"> <br><br>
+            <img width="900" height="500" src="layout_7.png"> <br><br>
             d. Drop down menu for showing according to gender and age on map.<br><br>
-            <img width="900" height="500" src="imgs/layout_8.png"> <br><br>
+            <img width="900" height="500" src="layout_8.png"> <br><br>
             e.Bar graph for age and gender distribution and change according to date.<br><br>
-            <img width="900" height="500" src="imgs/layout_9.png"> <br><br>
+            <img width="900" height="500" src="layout_9.png"> <br><br>
             <h4>3.Legend and colors</h4><br>
             a.I have used color oracle to check the deuteranopia common color blindness and selected d3.schemeSet3 for gender colors and d3.schemePaired for age group colors.<br><br>
             <img src="imgs/layout_10.png"> <br><br>
             <h4>4.Findings</h4><br>
-            <img width="500" height="500" src="imgs/layout_11.png"> <br><br>
+            <img width="500" height="500" src="layout_11.png"> <br><br>
             a.Deaths within age group of 1-10 and >80 are more compare to other age groups and death rate between males and females are not significant.<br><br>
-            <img width="500" height="500" src="imgs/layout_12.png"> <br><br>
+            <img width="500" height="500" src="layout_12.png"> <br><br>
             b.From time series plot deaths peaked on September 1st and most of deaths are between August 31st to September 10th. <br><br>
             <h4>5.References</h4><br>
             <a href="https://github.com/d3/d3/blob/main/API.md">D3 Documentation</a><br><br>
