--- a/documentation.html
+++ b/documentation.html
@@ -46,7 +46,7 @@
             <img width="900" height="500" src="layout_9.png"> <br><br>
             <h4>3.Legend and colors</h4><br>
             a.I have used color oracle to check the deuteranopia common color blindness and selected d3.schemeSet3 for gender colors and d3.schemePaired for age group colors.<br><br>
-            <img src="imgs/layout_10.png"> <br><br>
+            <img src="layout_10.png"> <br><br>
             <h4>4.Findings</h4><br>
             <img width="500" height="500" src="layout_11.png"> <br><br>
             a.Deaths within age group of 1-10 and >80 are more compare to other age groups and death rate between males and females are not significant.<br><br>
